--- a/style.css
+++ b/style.css
@@ -3,19 +3,18 @@
 	padding: 0;
 }
 
-body h1, h2, p {
+body h1, h2, p, a{
 	font-family: 'Raleway', sans-serif;
 }
 
 header a{
-	font-family: 'Girassol', cursive;
 	color: white;
 	margin-top: auto;
 	margin-bottom: auto;
-	transition: .6s;
 }
+
 header a:hover{
-	text-shadow: white 0em 0em .4em;
+	text-shadow: white 0em 0em .3em;
 }
 
 #topo-nav {
@@ -88,6 +87,7 @@ header a:hover{
 /* --------------Segunda Div---------------- */
 
 .logo a {
+	font-family: 'Girassol', cursive;
 	text-decoration: none;
 }
 
@@ -100,6 +100,7 @@ header a:hover{
 	display: flex;
 	justify-content: flex-end;
 	width: 33.33%;
+	margin-right: 1rem;
 }
 /* --------------Terceira Div------------------ */
 
@@ -190,7 +191,7 @@ header a:hover{
 
 .itens {
 	margin-top: 2rem;
-	margin-bottom: 8rem;
+	margin-bottom: 6rem;
 	width: 225px;
 	height: 300px;
 }
@@ -252,6 +253,7 @@ header a:hover{
 
 	.right-itens {
 		width: 25%;
+		margin-right: 0rem;
 	}
 
 	.right-itens a {
@@ -346,6 +348,10 @@ header a:hover{
 
 	.first-moda {
 		margin-top: 5rem;
+	}
+
+	.itens {
+		margin-bottom: 4rem;
 	}
 
 
