--- a/style.css
+++ b/style.css
@@ -327,9 +327,9 @@ header a:hover{
 		margin-left: .625rem;
 	}
 
-
 	.right-itens a {
-		padding-left: .5rem;
+		font-size: .8rem;
+		margin-right: .8rem;
 	}	
 
 	.logo {
