--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 	padding: 0;
 }
 
-body h1, h2, p, a{
+body h1, h2, h3, h4, p, a{
 	font-family: 'Raleway', sans-serif;
 }
 
@@ -27,6 +27,23 @@ header a:hover{
 
 
 
+/* ----------------------Css das 3 divs do #topo-nav-------------------------------- */
+
+
+/* --------------Primeira Div---------------- */
+#topo-nav .left-itens {
+	display: flex;
+	justify-content: flex-start;
+	width: 33.33%;
+}
+/* --------------Primeira Div----------------- */
+/* Relacionados a primeira div */
+#side-bar {
+	list-style: none;
+	margin-top: auto;
+	margin-bottom: auto;
+}
+
 /* Botão Mobile */
 #btn-mobile {
 	display: none;
@@ -34,49 +51,29 @@ header a:hover{
 	margin-top: auto;
 	margin-bottom: auto;
 }
-/* Botão Mobile */
-
-/* Botão Mobile */
 #sair {
 	display: none;
 }
 /* Botão Mobile */
 
 
-/* ----------------------Css das 3 divs do #topo-nav-------------------------------- */
-
-
-/* --------------Primeira Div---------------- */
-.left-itens {
-	display: flex;
-	justify-content: flex-start;
-	width: 33.33%;
-}
-/* --------------Primeira Div----------------- */
-
-#links {
-	list-style: none;
-	margin-top: auto;
-	margin-bottom: auto;
-}
-
-#links li{
+#side-bar li{
 	display: inline-block;
 	margin-inline: .313rem;
 }
 
 
-.left-itens a {
+#topo-nav .left-itens a {
 	text-decoration: none;
 	font-size: 1rem;
 	letter-spacing: .1rem;
 }
-
+/* Relacionados a primeira div */
 
 
 
 /* --------------Segunda Div---------------- */
-.logo {
+#topo-nav .logo {
 	display: flex;
 	justify-content: center;
 	width: 33.33%;
@@ -85,30 +82,76 @@ header a:hover{
 	text-shadow: white 0em 0em .2em
 }
 /* --------------Segunda Div---------------- */
-
-.logo a {
+/* Relacionados a segunda div */
+#topo-nav .logo a {
 	font-family: 'Girassol', cursive;
 	text-decoration: none;
 }
-
+/* Relacionados a segunda div */
 
 
 
 /* --------------Terceira Div---------------- */
 
-.right-itens{
+#topo-nav .right-itens{
 	display: flex;
 	justify-content: flex-end;
 	width: 33.33%;
-	margin-right: 1rem;
-}
-/* --------------Terceira Div------------------ */
-
-
-.right-itens a {
 	margin-right: 1.5rem;
 }
+/* --------------Terceira Div------------------ */
+/* Relacionados a terceira div */
+#topo-nav .right-itens .btn-usuario {
+	height: 100%;
+	padding-inline: 1rem;
+}
 
+#topo-nav .right-itens .btn-usuario:hover {
+	text-shadow: white 0em 0em 0em;
+}
+
+#topo-nav .right-itens .btn-sacola {
+	height: 100%;
+	padding-inline: 1rem;
+}
+
+.btn-sacola:hover {
+	text-shadow: white 0em 0em .2em;
+}
+
+#topo-nav .right-itens .btn-sacola i, 
+#topo-nav .right-itens .btn-usuario i{
+	margin-top: 1.7rem;
+}
+
+
+.right-itens .area-usuario-celular {
+	display: none;
+}
+
+#bar-list-active {
+	display: none;
+	position: absolute;
+	top: 76px;
+	right: 15px;
+	padding: 1rem;
+	background: #111111;
+	list-style: none;
+}
+
+#bar-list-active li {
+	margin-bottom: .5rem;
+	border-bottom: 1px solid #2e2e2e;
+}
+
+#bar-list-active a {
+	text-decoration: none;
+}
+
+#bar-list-active.active {
+	display: block;
+}
+/* Relacionados a terceira div */
 
 /*---------------------------------Section de apresentação----------------------------------*/
 
@@ -223,14 +266,91 @@ header a:hover{
 	transform: translate3d(0px, 0px, 0px);
 }
 
+/*-----------------------------Pop Up Login/Cadastro------------------------------*/
 
+#popup-login-cadastro {
+	position: fixed;
+	top: -150%;
+	left: 50%;
+	opacity: 0;
+	transform: translate(-50%, -50%) scale(1.25);
+	width: 400px;
+	padding: 2rem;
+	background: #fff;
+	border-radius: 5px;
+	box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
+	transition: top 0ms ease-in-out 400ms,
+				opacity 200ms ease-in-out 0ms,
+				transform 200ms ease-in-out 0ms;
+	z-index: 999;
+}
+
+#popup-login-cadastro.active {
+	top: 50%;
+	opacity: 1;
+	transform: translate(-50%, -50%) scale(1);
+	transition: top 0ms ease-in-out 0ms,
+				opacity 200ms ease-in-out 0ms,
+				transform 200ms ease-in-out 0ms;
+	}
+
+.topo-popup h2{
+	text-align: center;
+	margin: 10px 0px 20px;
+}
+
+#popup-login-cadastro .topo-popup a {
+	position: absolute;
+	top: .8rem;
+	right: 1em;
+	color: black;
+}
+
+#popup-login-cadastro .form .formulario-popup {
+	margin: 15px 0px;
+}
+
+#popup-login-cadastro .form .formulario-popup label {
+	font-size: 14px;
+	color: #222;
+}
+
+#popup-login-cadastro .form .formulario-popup input[type="text"],
+#popup-login-cadastro .form .formulario-popup input[type="password"] {
+	display: block;
+	padding: 10px;
+	width: 94%;
+	margin-top: 5px;
+	border-radius: 5px;
+	border: 1px solid #aaa;
+}
+
+#popup-login-cadastro .form .formulario-popup input[type="checkbox"] {
+	margin-right: 5px;
+}
+
+#popup-login-cadastro .form .formulario-popup button {
+	width: 100%;
+	height: 40px;
+	border: none;
+	outline: none;
+	border-radius: 5px;
+	cursor: pointer;
+}
+
+#popup-login-cadastro .form .formulario-popup a {
+	display: block;
+	text-align: right;
+	color: #1a79ca;
+	text-decoration: none;
+}
 
 
 /*---------------------------------Media Queries --------------------------------------*/	
 @media (max-width: 768px) {
 
 /* Ajeitando proporções para MD */
-	#links {
+	#side-bar {
 		display: none;
 	}
 
@@ -242,22 +362,40 @@ header a:hover{
 		display: block;
 	}
 
-	.left-itens {
+	#topo-nav .left-itens {
 		width: 25%;
 	}
 
-	.logo {
+	#topo-nav .logo {
 		width: 50%;
 		font-size: 2rem;
 	}
 
-	.right-itens {
+	#topo-nav .right-itens {
 		width: 25%;
-		margin-right: 0rem;
+		margin-right: 1.5rem;
 	}
 
-	.right-itens a {
-		margin-right: 1rem;
+	#area-usuario {
+		display: none;
+	}
+
+	.right-itens .area-usuario-celular {
+		display: block;
+	}
+
+	#topo-nav .right-itens .btn-sacola {
+		padding-inline: .5rem;
+	}
+
+	#topo-nav .right-itens .btn-usuario {
+		padding-inline: .5rem;
+	}
+
+	#topo-nav .right-itens .btn-sacola i, 
+	#topo-nav .right-itens .btn-usuario i{
+		font-size: 1.3rem;
+		margin-top: 1.5rem;
 	}
 
 	/* SideBar */
@@ -266,7 +404,7 @@ header a:hover{
 		display: inline-block;
 	}
 
-	#links {
+	#side-bar {
 		visibility: hidden;	
 		overflow-x: hidden;
 
@@ -285,7 +423,7 @@ header a:hover{
 		transition: .4s;
 	}
 
-	#links li{
+	#side-bar li{
 		display: block;
 		padding-top: 2.188rem;
 		padding-left: 1.875rem;
@@ -312,7 +450,7 @@ header a:hover{
 @media (max-width: 576px) {
 
 /* Ajeitando proporções para SM */
-	#links li{
+	#side-bar li{
 		display: block;
 		padding-top: .813rem;
 		padding-left: .625rem;
@@ -323,16 +461,30 @@ header a:hover{
 		padding-top: .5rem;
 		padding-bottom: .5rem;
 	}
+
 	#btn-mobile {
 		margin-left: .625rem;
 	}
 
-	.right-itens a {
-		font-size: .8rem;
-		margin-right: .8rem;
-	}	
+	.right-itens{
+		margin-right: .125rem;
+	}
 
-	.logo {
+	.btn-sacola {
+		padding-inline: .5rem;
+	}
+
+	.btn-usuario {
+		padding-inline: .5rem;
+	}
+
+	#topo-nav .right-itens .btn-sacola i, 
+	#topo-nav .right-itens .btn-usuario i{
+		font-size: 1rem;
+		margin-top: 1.2rem;
+	}
+
+	#topo-nav .logo {
 		font-size: 1.5rem;
 	}
 
