--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ header a:hover{
 	text-shadow: white 0em 0em .3em;
 }
 
-section, footer {
+section {
 	max-width: 1800px;
 	margin-inline: auto;
 }
@@ -179,6 +179,7 @@ section, footer {
 	padding: 1rem;
 	background: #111111;
 	list-style: none;
+	z-index: 998;
 }
 
 #area-usuario-active li {
@@ -208,6 +209,7 @@ section, footer {
 	border: 2px solid #111111;
 	border-top: 26px solid #111111;
 	box-shadow: rgba(17, 17, 17, 0.6) 0px 2px 8px 0px;
+	z-index: 997;
 
 
 	display: none;
@@ -391,43 +393,44 @@ section, footer {
 	width: 90%;
 	margin-inline: auto;
 	margin-bottom: 2rem;
-	display: flex;
-	justify-content: space-evenly;
-	flex-wrap: wrap;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
-#best-sellerM .itens,
-#best-sellerF .itens {
+.itens {
 	margin-top: 2rem;
 	margin-bottom: 6rem;
-	margin-inline: 1rem;
+	margin-inline: auto;
 	width: 225px;
 	height: 300px;
 }
 
-#best-sellerM .itens img,
-#best-sellerF .itens img {
+.itens img {
 	width: 100%;
 }
 
-#best-sellerM .itens a,
-#best-sellerF .itens a {
+.itens a {
 	color: black;
 	text-decoration: none;
 	margin-top: 1rem;
 	font-weight: bold;
 }
 
-#best-sellerM .itens .btn-add-carrinho,
-#best-sellerF .itens .btn-add-carrinho {
+.itens p {
+	width: 100%;
+	height: 20px;
+	overflow-x: hidden;
+	overflow-y: hidden;
+}
+
+.btn-add-carrinho {
 	display: block;
 	text-align: center;
 	border: 2px solid #111111;
 	padding: .5rem;
 }
 
-#best-sellerM .itens .btn-add-carrinho:hover,
-#best-sellerF .itens .btn-add-carrinho:hover {
+.btn-add-carrinho:hover {
 	box-shadow: black 0em 0em .3em;
 }
 
@@ -435,11 +438,11 @@ section, footer {
 
 [data-anime] {
 	opacity: 0;
-	transition: .3s;
+	transition: .6s;
 }
 
 [data-anime="bottom"] {
-	transform: translate3d(0px, 50px, 0px);
+	transform: translate3d(0px, 80px, 0px);
 }
 
 [data-anime].animate {
@@ -537,10 +540,36 @@ section, footer {
 
 /*----------------------------- Fim Pop Up Login/Cadastro------------------------------*/
 
+
+/*----------------------------- Inicio Rodapé  --------------------------------------*/
+
+#rodape {
+	width: 100%;
+	height: 300px;
+	background: #f4f4f4;
+}
+
+.conteudo-rodape {
+	max-width: 1800px;
+}
+
+
 /*---------------------------------Media Queries --------------------------------------*/	
+@media (max-width: 1280px) {
+	.itens {
+		width: 160px;
+		height: 213px;
+	}
+}
+
 @media (max-width: 820px) {
 
 /* Ajeitando proporções para MD */
+	#best-sellerM,
+	#best-sellerF {
+		grid-template-columns: 1fr 1fr;
+	}
+
 	#side-bar {
 		display: none;
 	}
@@ -649,6 +678,10 @@ section, footer {
 @media (max-width: 576px) {
 
 /* Ajeitando proporções para SM */
+	#best-sellerM, #best-sellerF {
+		grid-template-columns: 1fr;
+	}
+
 	#side-bar li{
 		display: block;
 		padding-top: .813rem;
