--- a/css/style.css
+++ b/css/style.css
@@ -442,7 +442,7 @@ section {
 }
 
 [data-anime="bottom"] {
-	transform: translate3d(0px, 80px, 0px);
+	transform: translate3d(0px, 50px, 0px);
 }
 
 [data-anime].animate {
@@ -731,6 +731,8 @@ section {
 
 	.itens {
 		margin-bottom: 6rem;
+		width: 225px;
+		height: 300px;
 	}
 
 
