--- a/css/style.css
+++ b/css/style.css
@@ -678,7 +678,8 @@ section {
 @media (max-width: 576px) {
 
 /* Ajeitando proporções para SM */
-	#best-sellerM, #best-sellerF {
+	#best-sellerM,
+	#best-sellerF {
 		grid-template-columns: 1fr;
 	}
 
@@ -716,13 +717,21 @@ section {
 	}
 
 	/* Apresentação */
-	
+
 	#apresentacao-site {
 		margin-top: .5rem;
 	}
 
 	#apresentacao-site .texto-apresentacao p {
 		font-size: 1rem;
+	}
+
+	.intro {
+		margin-top: 2rem;
+	}
+
+	.first-moda {
+		margin-top: 5rem;
 	}
 
 	.itens {
